# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md
Shaders/: fragment.fs  vertex.vs
src/: main.cpp
